Fixed tabline for activity page without a team and made scrollbar width none.

--- a/src/main/resources/static/css/view-activity.css
+++ b/src/main/resources/static/css/view-activity.css
@@ -647,6 +647,7 @@ hr.rounded {
     height:80%;
     overflow-x: hidden;
     overflow-y: scroll;
+    scrollbar-width: none;
 
 }
 
